# Kuvio-model

./: .gitignore  Cargo.toml  README.md  build.sh  main.py
config/: config.toml
docs/: Basic.md  game-provider.md  game.md  runtime.md
settings/: settings.toml
src/: engine.rs  implementation.rs  io.rs  main.rs  main_old.rs
