[package]
name = "kuvio-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
lazy_static = "1.4.0"
plotters = "0.3.5"
rand = "0.8.5"
rayon = "1.8.1"
strum = "0.26.1"
strum_macros = "0.26.1"
toml = "0.8.10"
walkdir = "2.4.0"
